added inline CSS

--- a/foundations/intro-to-css/01-css-methods/mysolution/mysolution.html
+++ b/foundations/intro-to-css/01-css-methods/mysolution/mysolution.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="./mysolution.css">
 </head>
 <body>
-    <p>Text Color</p>
-    <div>Test Color</div>
+    <div>Here is my solution</div>
+    <p>Here is my solution</p>
+    <button style="background-color: orange; font-size: 18px;">Here is my solution</button>
 </body>
 </html>
